[package]
name = "evm-network-ellaism"
version = "0.11.0-beta.0"
description = "Ellaism patches for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/etclabscore/sputnikvm"

[dependencies]
evm = { version = "0.11.0-beta", path = "../..", default-features = false }
ethereum-bigint = { version = "0.2", default-features = false }

[features]
default = ["std", "rust-secp256k1"]
rlp = ["ethereum-bigint/rlp"]
c-secp256k1 = ["evm/c-secp256k1"]
rust-secp256k1 = ["evm/rust-secp256k1"]
std = ["evm/std"]
