[package]
name = "evm-network-ellaism"
version = "0.11.0"
description = "Ellaism patches for SputnikVM. Deprecated and will be dropped in future releases: use evm-network instead"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/evm-rs"
edition = "2018"

[dependencies]
evm = { version = "0.11", path = "../..", default-features = false }
ethereum-bigint = { version = "0.2", default-features = false }

[features]
default = ["std", "rust-secp256k1"]
rlp = ["ethereum-bigint/rlp"]
c-secp256k1 = ["evm/c-secp256k1"]
rust-secp256k1 = ["evm/rust-secp256k1"]
std = ["evm/std"]
